--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -32,7 +32,7 @@ have a passenger use RoadMap, not the driver.
 RoadMap is available from the following mirror sites:
 <P>
 <A class=normal 
-         href="http://noscience.net/~pmartin/roadmap/">noscience.net</A> 
+         href="http://roadmap.noscience.net/">roadmap.noscience.net</A> 
 <P>
 <A class=normal 
          href="http://roadmap.digitalomaha.net/">roadmap.digitalomaha.net</A> 
