--- a/trunk/roadmap/web/index.html
+++ b/trunk/roadmap/web/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML><HEAD><TITLE>RoadMap freeware: street maps on Linux</TITLE>
+<HTML><HEAD><TITLE>RoadMap: car navigation system for Linux and UNIX</TITLE>
 <META http-equiv=Content-Type content="text/html; charset=windows-1252"><LINK 
 href="sitestandard.css" type=text/css rel=stylesheet>
 </HEAD>
 <BODY class=homeview>
 <CENTER>
-<H1>RoadMap freeware: street maps on Linux</H1><BR></CENTER>
+<H1>RoadMap: car navigation system for Linux and UNIX</H1><BR></CENTER>
 <HR>
 <a class="normal" href="index.html">Home</a>
 <a class="normal" href="download.html">Download</a>
@@ -41,13 +41,13 @@ Latchesar Ionkov on the
 <CENTER>
    (c) Copyright Pascal Martin, 2003 (pascal dot martin at iname dot com)
 </CENTER>
-<P>RoadMap is a program for street (and car) navigation on Linux. It displays
-a street map, tracks the position provided by a NMEA-compliant GPS receiver,
-identifies the street matching this GPS position and announces the name of
-the other street at the next intersection. A rudimentary trip feature allows
-RoadMap to display some basic navigation information (distance to the
-destination, direction, speed, etc..). Voice messages are generated that
-duplicate some of the screen information.
+<P>RoadMap is a program that provides a car navigation for Linux and UNIX.
+It displays a map of the streets, tracks the position provided by a
+NMEA-compliant GPS receiver, identifies the street matching this GPS position
+and announces the name of the crossing street at the next intersection. A
+rudimentary trip feature allows RoadMap to display some basic navigation
+information (distance to the destination, direction, speed, etc..). Voice
+messages are generated that duplicate some of the screen information.
 
 <P>It is possible to display a specific area by providing a (complete or
 incomplete) postal address, the intersection of two streets or an exact
