--- a/trunk/roadmap/web/todo.html
+++ b/trunk/roadmap/web/todo.html
@@ -29,8 +29,8 @@ in the stable branch, as long as map compatibility is maintained. It may
 take some time before the development branch appears on the web site,
 depending on how many bugs are discovered in the stable version.
 <P>
-When 1.1 will become stable, a 1.2 stable branch will be created and
-an 1.3 development branch will be started anew, and so on.
+When the 1.1 code will stabilize, a new 1.2 stable branch will be created and
+a 1.3 development branch will be started anew, and so on.
 <P>
 (The changes believed to break compatibility with RoadMap 1.0 are marked
 with a "[1.1]" sign.)
