--- a/roadmap/web/history.html
+++ b/roadmap/web/history.html
@@ -24,7 +24,7 @@ href="sitestandard.css" type=text/css rel=stylesheet>
       if the street search causes another map to become current.
   <LI>Minimally decent help menu, using the HTML manual and a web browser.
   <LI>Minor documentation changes: describe the use of aptconvert, make it
-      explicit RoadMap can be used without a GPS receiver.
+      explicit that RoadMap can be used without a GPS receiver.
   <LI>The documentation tar file now contains a complete copy of the RoadMap
       web site's html pages.
   <LI>Take into account the disappearance of roadmap.saignon.net.
