--- a/trunk/roadmap/web/history.html
+++ b/trunk/roadmap/web/history.html
@@ -18,11 +18,11 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
 <HR> <BR>
-<P>Roadmap v1.0.6 (May 23, 2004):
+<P>Roadmap v1.0.6 (May 30, 2004):
 <UL>
   <LI>Fix by Paul Fox: RoadMap may crash at the intersection of counties
       if the street search causes another map to become current.
-  <LI>Minimally decent help menu, using the HTML manual and a web browser.
+  <LI>Minimally decent help, using the HTML manual and a web browser.
   <LI>Minor documentation changes: describe the use of aptconvert, make it
       explicit that RoadMap can be used without a GPS receiver.
   <LI>The documentation tar file now contains a complete copy of the RoadMap
