--- a/roadmap/web/index.html
+++ b/roadmap/web/index.html
@@ -34,8 +34,8 @@ RoadMap is available from the following mirror sites:
 <P>
 A version of RoadMap for the Sharp Zaurus is also made available by
 Latchesar Ionkov on the 
-<A class="norma;" href="http://community.zaurus.com/projects/zroadmap/">
-  Sharp's Zaurus communauty web site
+<A class="norma;" href="http://downloads.zaurususergroup.com/community/66.180.235.230/projects/zroadmap/">
+  Sharp's Zaurus user's group web site
 </A>.
 <P>
 The latest Roadmap sources are also available from <A class=normal
