--- a/trunk/roadmap/web/download.html
+++ b/trunk/roadmap/web/download.html
@@ -21,8 +21,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <P>
 <b>Disclaimer</b>: RoadMap is known to have bugs. The data provided by
 the US Census Bureau is known to have errors. The RoadMap maps generated
-from the US Census Bureau data contains even more errors. <b> Do not use
-RoadMap for Navigation</b>.
+from the US Census Bureau data contains even more errors. <b> Use RoadMap
+at your own risk</b>.
 <P>
 <b>Caution</b>: always look at the road when driving a car, do not look
 at the RoadMap screen. The proper way for using RoadMap in a car is to
@@ -48,6 +48,15 @@ href="http://sourceforge.net/projects/roadmap/">Sourceforge</A>.
 </CENTER>
 <HR>
 The RoadMap files below are tar files compressed using <b>gzip</b>.
+
+<P>RoadMap v1.0.7:
+<A class=normal href="roadmap/roadmap_1_0_7_src.tar.gz">Sources only</A>,
+<A class=normal 
+   href="roadmap/roadmap_1_0_7_i686.tar.gz">Linux/i686 binaries</A>,
+<A class=normal 
+   href="roadmap/roadmap_1_0_7_armv4l.tar.gz">Linux/ARM binaries</A>,
+<A class=normal 
+   href="roadmap/roadmap_1_0_7_doc.tar.gz">Documentation</A>.
 
 <P>RoadMap v1.0.6:
 <A class=normal href="roadmap/roadmap_1_0_6_src.tar.gz">Sources only</A>,
@@ -193,5 +202,12 @@ The RoadMap files below are tar files compressed using <b>gzip</b>.
 <A class=normal href="roadmap/roadmap_0_13_src.tgz">Sources only</A>,
 <A class=normal href="roadmap/roadmap_0_13_i686.tgz">Linux/i686 binaries</A>,
 <A class=normal href="roadmap/roadmap_0_13_armv4l.tgz">Linux/ARM binaries</A>.
+<BR>
+<HR>
+<CENTER>
+This site is made available courtesy of
+<a class="normal" href="http://www.digitalomaha.net/">DigitalOmaha</a>,
+a low priced, high quality hosting service provider.
+</CENTER>
 </BODY></HTML>
 
