--- a/trunk/roadmap/web/maps.html
+++ b/trunk/roadmap/web/maps.html
@@ -21,8 +21,8 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <P>
 <b>Disclaimer</b>: RoadMap is known to have bugs. The data provided by
 the US Census Bureau is known to have errors. The RoadMap maps generated
-from the US Census Bureau data contains even more errors. <b> Do not use
-RoadMap for Navigation</b>.
+from the US Census Bureau data contains even more errors. <b> Use RoadMap
+at your own risk</b>.
 <P>
 <b>Caution</b>: always look at the road when driving a car, do not look
 at the RoadMap screen. The proper way for using RoadMap in a car is to
@@ -180,5 +180,13 @@ command.)
     </TD>
   </TR>
   </TBODY></TABLE> 
-</CENTER></BODY></HTML>
+</CENTER>
+<BR>
+<HR>
+<CENTER>
+This site is made available courtesy of
+<a class="normal" href="http://www.digitalomaha.net/">DigitalOmaha</a>,
+a low priced, high quality hosting service provider.
+</CENTER>
+</BODY></HTML>
 
