--- a/trunk/roadmap/web/screenshots.html
+++ b/trunk/roadmap/web/screenshots.html
@@ -18,45 +18,35 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 <a class="normal" href="list.html">Mail</a>
 <a class="normal" href="todo.html">Todo</a>
 <HR> <BR>
-The screenshots below were made with the GTK2 version of RoadMap 1.0.
+Most screenshots below were made with the GTK2 version of RoadMap.
 <HR> <BR>
 <TABLE cellSpacing=5 cellPadding=0 width="100%" align=center border=0 
 valign="center">
   <TBODY>
   <TR vAlign=top>
-    <TD width="30%"><A href="screen-market.jpg">
+    <TD width="50%"><A href="screen-market.jpg">
       <center>
         <IMG src="stamp-market.jpg" width="169" height="131"></A>
       </center>
     </TD>
-    <TD width="30%"><A href="screen-ellis.jpg">
+    <TD width="50%"><A href="screen-ellis.jpg">
       <center>
         <IMG src="stamp-ellis.jpg" width="169" height="131"></A>
       </center>
     </TD>
-    <TD width="30%"><A href="roadmap-gpe.jpg">
-      <center>
-        <IMG src="stamp-gpe.jpg" width="120" height="160"></A>
-      </center>
-    </TD>
   </TR>
   <TR vAlign=top>
-    <TD width="30%">
+    <TD width="50%">
       <center>
-        RoadMap showing the northern section of San Francisco, 
+        RoadMap 1.0.11 showing the northern section of San Francisco, 
         with the address selection dialog open. </TD>
       </center>
-    <TD width="30%">
+    <TD width="50%">
       <center>
-        RoadMap showing the northern section of San Francisco. 
+        RoadMap 1.0.11 showing the northern section of San Francisco. 
         The Ellis street has been selected and the map was rotated 45 Degrees.
       </center>
     </TD>
-    <TD width="30%">
-      <center>
-        An example of RoadMap on the HP iPAQ, running familiar
-        v0.7.2, with the GPE desktop.
-      </center>
   </TR>
   </TBODY>
 </TABLE>
@@ -65,26 +55,50 @@ valign="center">
 valign="center">
   <TBODY>
   <TR vAlign=top>
-    <TD width="30%"><A href="screen-roadgps.jpg">
+    <TD width="50%"><A href="screen-roadgps.jpg">
       <center>
         <IMG src="stamp-roadgps.jpg" width="92" height="134"></A>
       </center>
     </TD>
-    <TD width="30%"><A href="screen-preferences.jpg">
+    <TD width="50%"><A href="screen-preferences.jpg">
       <center>
         <IMG src="stamp-preferences.jpg" width="169" height="134"></A>
       </center>
     </TD>
-    <TD width="30%"><A href="screen-next-release.jpg">
+  </TR>
+  <TR vAlign=top>
+    <TD width="30%"><center>The RoadMap 1.0.11 GPS console.</center></TD>
+    <TD width="30%"><center>The RoadMap Preferences dialog.</center></TD>
+  </TR>
+  </TBODY>
+</TABLE>
+<TABLE cellSpacing=5 cellPadding=0 width="100%" align=center border=0 
+valign="center">
+  <TBODY>
+  <TR vAlign=top>
+    <TD width="50%"><A href="roadmap-gpe.jpg">
       <center>
-        <IMG src="stamp-next-release.jpg" width="169" height="134"></A>
+        <IMG src="stamp-gpe.jpg" width="120" height="160"></A>
+      </center>
+    </TD>
+    <TD width="50%"><A href="screen-wince.jpg">
+      <center>
+        <IMG src="stamp-wince.jpg" width="169" height="134"></A>
       </center>
     </TD>
   </TR>
   <TR vAlign=top>
-    <TD width="30%"><center>The RoadMap GPS console.</center></TD>
-    <TD width="30%"><center>The RoadMap Preferences dialog.</center></TD>
-    <TD width="30%"><center>The RoadMap v1.0.4 look, with Icons.</center></TD>
+    <TD width="50%">
+      <center>
+        An example of RoadMap on an HP iPAQ running familiar
+        v0.7.2, with the GPE desktop.
+      </center>
+    </TD>
+    <TD width="50%">
+      <center>
+        An example of RoadMap 1.0.11 on an HP iPAQ running PocketPC 2002.
+      </center>
+    </TD>
   </TR>
   </TBODY>
 </TABLE>
