--- a/roadmap/web/history.html
+++ b/roadmap/web/history.html
@@ -23,7 +23,7 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 a server upgrade, the RoadMap e-mail list has been lost. Please subscribe to
 the list again if you have not done so already. Sorry for the inconvenience.
 <HR> <BR>
-<P>Roadmap v1.0.11 (september 5, 2005)
+<P>Roadmap v1.0.11 (september 9, 2005)
 <UL>
   <LI>Merged a patch from Gergely Molnar to make screenshots of the
       RoadMap canvas. Only the first patch was merged (single screenshot).
@@ -57,6 +57,9 @@ the list again if you have not done so already. Sorry for the inconvenience.
       in, the streets now have a border and look more professional.
   <LI>Merged a patch by Ehud Shabtai: the map view follows a mouse drag.
   <LI>Updated RoadMap to support the US Census Bureau 2004 Second Edition.
+  <LI>Avoid repeating an error message when a map file is not found.
+  <LI>Changed the RoadGps log file mechanism to let the user select what
+      and where the log file will be (using a file selection dialog).
 </UL>
 <P>Roadmap v1.0.10 (may 15, 2005)
 <UL>
