--- a/roadmap/web/download.html
+++ b/roadmap/web/download.html
@@ -23,15 +23,28 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 a server upgrade, the RoadMap e-mail list has been lost. Please subscribe to
 the list again if you have not done so already. Sorry for the inconvenience.
 <HR>
+<H2>Credits</H2>
 <P>
-<b>Disclaimer</b>: RoadMap is known to have bugs. The data provided by
-the US Census Bureau is known to have errors. The RoadMap maps generated
-from the US Census Bureau data contains even more errors. <b> Use RoadMap
-at your own risk</b>.
+The original RoadMap was (and still is) developped by Pascal Martin (pascal
+dot martin at iname dot com). A version of RoadMap for the Sharp Zaurus was
+developped by Latchesar Ionkov (who wrote the original QT support). The
+support for the Digital Charts of the World was contributed by Stephen
+Woodbridge. The version of RoadMap for Windows is developped and supported
+by Ehud Shabtai (eshabtai at gmail dot com).
 <P>
-<b>Caution</b>: always look at the road when driving a car, do not look
-at the RoadMap screen. The proper way for using RoadMap in a car is to
-have a passenger use RoadMap, not the driver.
+The latest Roadmap sources are also available from <A class=normal
+href="http://sourceforge.net/projects/roadmap/">Sourceforge's CVS</A>.
+<P>
+<H2>Disclaimer</H2>
+RoadMap is known to have bugs. The data provided by the US Census Bureau
+is known to have errors. The RoadMap maps generated from the US Census
+Bureau data probably contains even more errors. <b> Use RoadMap at your
+own risk</b>.
+<P>
+<H2>Caution</H2>
+Always look at the road when driving a car, do not look at the RoadMap
+screen. The proper way for using RoadMap in a car is to have a passenger
+use RoadMap, not the driver.
 <HR>
 <CENTER>
 <P>
