--- a/roadmap/web/index.html
+++ b/roadmap/web/index.html
@@ -27,21 +27,27 @@ href="sitestandard.css" type=text/css rel=stylesheet>
 a server upgrade, the RoadMap e-mail list has been lost. Please subscribe to
 the list again if you have not done so already. Sorry for the inconvenience.
 <HR>
-<CENTER>
+<H2>Credits</H2>
 <P>
-A version of RoadMap for the Sharp Zaurus is also made available by
-Latchesar Ionkov on the 
-<A class="norma;" href="http://downloads.zaurususergroup.com/community/66.180.235.230/projects/zroadmap/">
-  Sharp's Zaurus user's group web site
-</A>.
+The original RoadMap was (and still is) developped by Pascal Martin (pascal
+dot martin at iname dot com). A version of RoadMap for the Sharp Zaurus was
+developped by Latchesar Ionkov (who wrote the original QT support). The
+support for the Digital Charts of the World was contributed by Stephen
+Woodbridge. The version of RoadMap for Windows is developped and supported
+by Ehud Shabtai (eshabtai at gmail dot com).
 <P>
 The latest Roadmap sources are also available from <A class=normal
 href="http://sourceforge.net/projects/roadmap/">Sourceforge's CVS</A>.
-</CENTER>
 <HR>
 <BR>
 <CENTER>
-   (c) Copyright Pascal Martin, 2003 (pascal dot martin at iname dot com)
+   (c) Copyright Pascal Martin, 2003, 2005 (pascal dot martin at iname dot com)
+<BR>
+   (c) Copyright Latchesar Ionkov, 2003
+<BR>
+   (c) Copyright Stephen Woodbridge, 2004
+<BR>
+   (c) Copyright Ehud Shabtai, 2005 (eshabtai at gmail dot com)
 </CENTER>
 
 <P>The following is a short description of RoadMap. More information is
@@ -49,7 +55,7 @@ available in the <a class="normal" href="documentation.html">documentation</a>
 distributed with RoadMap.
 
 <P>RoadMap is an open source (GPL) program that provides a car navigation for
-Linux and UNIX.
+Linux, UNIX and now Windows CE (a.k.a. PocketPC).
 It displays a map of the streets, tracks the position provided by a
 NMEA-compliant GPS receiver, identifies the street matching this GPS position
 and announces the name of the crossing street at the next intersection. A
